--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                         </p>
                 </section>
 
-                <footer id="contact" class="flex-item bordered-section">
+                <section id="contact" class="flex-item bordered-section">
                     <h3>Contact Me</h3>
                         <p>
                             I'd love to hear from you! Let's chat about coding, UX, studies, or job opportunities.</p>
@@ -202,8 +202,10 @@
                             </form><br>
                             <!--Remember to get extra Freeform access and redirect to thanks.html after submitting-->
                         </p>
-                </footer>
-
+                    </section>
+                    <footer class="flex-item bordered-section">
+                        <p>Source code in <a href="https://www.github.com/sannatikk/web-kurssi-testiprojekti">my GitHub</a>.</p>
+                    </footer>
             </div>
         </main>
         <script src="assets/javascript/actions.js"></script>
