--- a/playground.html
+++ b/playground.html
@@ -117,7 +117,6 @@
                     </p>
                 </article>
 
-
                 <article id="petPics" class="flex-item bordered-section">
                     <h3>Feeling down?</h3>
                     <p>
@@ -132,8 +131,10 @@
                         <div id="petErrorMessage" style="display:none;">Error fetching data. Please try again.</div>
                     </p>
                 </article>
-
             </div>
+            <footer class="flex-item bordered-section">
+                <p>Source code in <a href="https://www.github.com/sannatikk/web-kurssi-testiprojekti">my GitHub</a>.</p>
+            </footer>
         </main>
 
         <script src="assets/javascript/actions.js"></script>
