--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@
                         <p>
                             I'm in the Information Technology (B.Eng) degree program at Oulu University of Applied Sciences. My chosen speciality is Software Development, and I'm in my second year of studies.  
                             My GPA is 5.0/5.0, and I am on course to graduate on time in May 2027.
-                            <!-- <br><br>My current plans include completing an exchange year at a partner institution in Neu-Ulm, Germany, to earn a double degree (B.Eng in Finland & B.Sc in Germany). The year in Neu-Ulm will be focusing specifically on Artificial Intelligence and Information Management. -->
-                            <br><br>Feel free to browse <a href="https://www.github.com/sannatikk/">my GitHub</a> repositories for examples of schoolwork I've been doing! 
+                            <br><br>Feel free to browse <a href="https://www.github.com/sannatikk/" target="_blank" rel="noopener noreferrer">my GitHub</a> repositories for examples of schoolwork I've been doing! 
                             Some of the technical courses I've taken so far include:
                             
                             <table class="studies-table">
@@ -152,7 +151,7 @@
                 <section id="work" class="flex-item bordered-section">
                     <h3>My Work + Experience</h3>
                         <p>
-                            Feel free to browse <a href="https://github.com/sannatikk/">my GitHub</a> repositories for examples of schoolwork I've been doing! Coming up later this fall: a large (15 ECTS) web application project.
+                            Feel free to browse <a href="https://github.com/sannatikk/" target="_blank" rel="noopener noreferrer">my GitHub</a> repositories for examples of schoolwork I've been doing! Coming up later this fall: a large (15 ECTS) web application project.
                             
                             <br><br>Some languages I've been using lately:
                             <ul>
@@ -164,10 +163,10 @@
                                 <li>SQL</li>
                                 <li>Python</li>
                             </ul>
-                            My favorite project so far has been <a href="https://github.com/sannatikk/web-kurssi-testiprojekti">this site you're currently on</a>! Even though this is only a 5-credit course, building a responsive website from scratch has been a great learning experience, and I'm proud of the result. It's very fulfilling to immediately be able to see the fruits of your labor!
-                            <br><br>A great larger project from my first year of studies was <a href="https://github.com/sannatikk/ATM_simulator_app">an ATM simulator</a>, where I got to practise building a Qt Widget frontend and Node Express backend, hand-building and querying relational databases, and using RESTful APIs. 
+                            My favorite project so far has been <a href="https://github.com/sannatikk/web-kurssi-testiprojekti" target="_blank" rel="noopener noreferrer">this site you're currently on</a>! Even though this is only a 5-credit course, building a responsive website from scratch has been a great learning experience, and I'm proud of the result. It's very fulfilling to immediately be able to see the fruits of your labor!
+                            <br><br>A great larger project from my first year of studies was <a href="https://github.com/sannatikk/ATM_simulator_app" target="_blank" rel="noopener noreferrer">an ATM simulator</a>, where I got to practise building a Qt Widget frontend and Node Express backend, hand-building and querying relational databases, and using RESTful APIs. 
                             Fun extra credit challenges included hosting the database and backend remotely, using custom style sheets, and ensuring cross-platform compatibility.
-                            <br><br>A fun electronics project from 2023 was the Arduino-based game <a href="https://github.com/sannatikk/SpedenSpelit">"Speden Spelit"</a>, which features LEDs, buttons, and a 7-segment display. Pressing the start button initiates LEDs blinking in random order at a steadily increasing pace. 
+                            <br><br>A fun electronics project from 2023 was the Arduino-based game <a href="https://github.com/sannatikk/SpedenSpelit" target="_blank" rel="noopener noreferrer">"Speden Spelit"</a>, which features LEDs, buttons, and a 7-segment display. Pressing the start button initiates LEDs blinking in random order at a steadily increasing pace. 
                             Players must press the gameplay buttons in the correct sequence to accumulate points, and the game ends if a mistake is made; the 7-segment display shows the score and signals if a new high score is achieved.
                             <br><br>
                         </p>
@@ -185,8 +184,8 @@
                         <p>
                             I'd love to hear from you! Let's chat about coding, UX, studies, or job opportunities.</p>
 
-                            <br><img src="assets/pictures/linkedinlogo.png" alt="linkedin logo" width="14"> <a href="https://www.linkedin.com/in/sanna-poritikkakoski/">sanna-poritikkakoski</a>
-                            <br><img src="assets/pictures/githublogo.png" alt="github logo" width="14"> <a href="https://github.com/sannatikk">sannatikk</a>
+                            <br><img src="assets/pictures/linkedinlogo.png" alt="linkedin logo" width="14"> <a href="https://www.linkedin.com/in/sanna-poritikkakoski/" target="_blank" rel="noopener noreferrer">sanna-poritikkakoski</a>
+                            <br><img src="assets/pictures/githublogo.png" alt="github logo" width="14"> <a href="https://github.com/sannatikk" target="_blank" rel="noopener noreferrer">sannatikk</a>
                             <br><br>
 
                             <form action="https://formspree.io/f/xyzgvrby" method="post" onsubmit="return confirmSubmission()" class="contact-form">
@@ -204,7 +203,7 @@
                         </p>
                     </section>
                     <footer class="flex-item bordered-section">
-                        <p>Source code in <a href="https://www.github.com/sannatikk/web-kurssi-testiprojekti">my GitHub</a>.</p>
+                        <p>Source code in <a href="https://www.github.com/sannatikk/web-kurssi-testiprojekti" target="_blank" rel="noopener noreferrer">my GitHub</a>.</p>
                     </footer>
             </div>
         </main>
