--- a/playground.html
+++ b/playground.html
@@ -147,7 +147,7 @@
             </div>
 
             <footer class="flex-item bordered-section">
-                <p>Source code in <a href="https://www.github.com/sannatikk/web-kurssi-testiprojekti">my GitHub</a>.</p>
+                <p>Source code in <a href="https://www.github.com/sannatikk/web-kurssi-testiprojekti" target="_blank" rel="noopener noreferrer">my GitHub</a>.</p>
             </footer>
 
         </main>
