--- a/index.html
+++ b/index.html
@@ -76,15 +76,21 @@
                                 <tbody>
                                     <tr>
                                         <td>2024</td>
+                                        <td>Web Progamming Application Project </td>
+                                        <td>15</td>
+                                        <td><i>TBA...</i></td>
+                                    </tr>
+                                    <tr>
+                                        <td>2024</td>
                                         <td>Introduction to Web Applications</td>
                                         <td>5</td>
-                                        <td><i>5</i></td>
+                                        <td>5</td>
                                     </tr>
                                     <tr>
                                         <td>2024</td>
                                         <td>Java Programming</td>
                                         <td>5</td>
-                                        <td><i>TBA...</i></td>
+                                        <td>5</td>
                                     </tr>
 
                                     <tr>
@@ -153,14 +159,15 @@
                         <p>
                             Feel free to browse <a href="https://github.com/sannatikk/" target="_blank" rel="noopener noreferrer">my GitHub</a> repositories for examples of schoolwork I've been doing! Coming up later this fall: a large (15 ECTS) web application project.
                             
-                            <br><br>Some languages I've been using lately:
-                            <ul>
+                            <br><br>Some technologies I've been working with recently:
+                            <ul>                               
+                                <li>JavaScript
+                                <li>React (with Mocha/Chai/Jest for testing)</li>
+                                <li>Node.js</li>
                                 <li>Java</li>
-                                <li>JavaScript</li>
-                                <li>HTML</li>
-                                <li>CSS</li>
                                 <li>C++</li>
-                                <li>SQL</li>
+                                <li>HTML & CSS</li>
+                                <li>SQL (MySQL, PostgreSQL)</li>
                                 <li>Python</li>
                             </ul>
                             My favorite project so far has been <a href="https://github.com/sannatikk/web-kurssi-testiprojekti" target="_blank" rel="noopener noreferrer">this site you're currently on</a>! Even though this is only a 5-credit course, building a responsive website from scratch has been a great learning experience, and I'm proud of the result. It's very fulfilling to immediately be able to see the fruits of your labor!
