--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                             In spring 2023, I made the decision to quit my comfortable job in the funeral industry and apply to get a degree in Information Technology (Bachelor of Engineering).
                             Now, I'm a second-year student specializing in Software Development, and I'm loving the learning process and seeing how my past experiences enhance my current studies!
                             I'm curious about working with SaaS, and I'm especially interested in all things UX, because that's what initially sparked my passion for the IT field. 
-                            My long-term ambitions include finding a position where I can combine my technical skills with my drive for managing projects efficiently and delivering top-tier user experiences.
+                            My long-term ambitions include finding a position where I can combine my technical skills with my drive for managing projects efficiently and delivering top notch user experiences.
                             <br><br>When I'm not coding, you can find me adventuring on my bike, knitting, or planning a trip to Norway for some birdwatching.
                         </p>
                 </section>
@@ -157,7 +157,8 @@
                 <section id="work" class="flex-item bordered-section">
                     <h3>My Work + Experience</h3>
                         <p>
-                            Feel free to browse <a href="https://github.com/sannatikk/" target="_blank" rel="noopener noreferrer">my GitHub</a> repositories for examples of schoolwork I've been doing! Coming up later this fall: a large (15 ECTS) web application project.
+                            Feel free to browse <a href="https://github.com/sannatikk/" target="_blank" rel="noopener noreferrer">my GitHub</a> repositories for examples of schoolwork I've been doing! 
+                            What I'm working on this fall: a large-ish (15 ECTS) full stack project, where I'll be building an interactive web app for mobie hobbyists using PostgreSQL, Node, and React.
                             
                             <br><br>Some technologies I've been working with recently:
                             <ul>                               
@@ -170,7 +171,7 @@
                                 <li>SQL (MySQL, PostgreSQL)</li>
                                 <li>Python</li>
                             </ul>
-                            My favorite project so far has been <a href="https://github.com/sannatikk/web-kurssi-testiprojekti" target="_blank" rel="noopener noreferrer">this site you're currently on</a>! Even though this is only a 5-credit course, building a responsive website from scratch has been a great learning experience, and I'm proud of the result. It's very fulfilling to immediately be able to see the fruits of your labor!
+                            My favorite project before this term has been <a href="https://github.com/sannatikk/web-kurssi-testiprojekti" target="_blank" rel="noopener noreferrer">this site you're currently on</a>! Even though this is only a 5-credit course, building a responsive website from scratch has been a great learning experience, and I'm proud of the result. It's very fulfilling to immediately be able to see the fruits of your labor!
                             <br><br>A great larger project from my first year of studies was <a href="https://github.com/sannatikk/ATM_simulator_app" target="_blank" rel="noopener noreferrer">an ATM simulator</a>, where I got to practise building a Qt Widget frontend and Node Express backend, hand-building and querying relational databases, and using RESTful APIs. 
                             Fun extra credit challenges included hosting the database and backend remotely, using custom style sheets, and ensuring cross-platform compatibility.
                             <br><br>A fun electronics project from 2023 was the Arduino-based game <a href="https://github.com/sannatikk/SpedenSpelit" target="_blank" rel="noopener noreferrer">"Speden Spelit"</a>, which features LEDs, buttons, and a 7-segment display. Pressing the start button initiates LEDs blinking in random order at a steadily increasing pace. 
