--- a/index.html
+++ b/index.html
@@ -75,10 +75,22 @@
                                 </thead>
                                 <tbody>
                                     <tr>
+                                        <td>2025</td>
+                                        <td>Web and Hybrid Technologies in Mobile Development</td>
+                                        <td>15</td>
+                                        <td><i>TBA...</i></td>
+                                    </tr>
+                                   <tr>
+                                        <td>2025</td>
+                                        <td>Mobile Development with Native Technologies</td>
+                                        <td>15</td>
+                                        <td><i>TBA...</i></td>
+                                    </tr>
+                                    <tr>
                                         <td>2024</td>
                                         <td>Web Progamming Application Project </td>
                                         <td>15</td>
-                                        <td><i>TBA...</i></td>
+                                        <td>5</td>
                                     </tr>
                                     <tr>
                                         <td>2024</td>
