--- a/index.html
+++ b/index.html
@@ -87,6 +87,12 @@
                                         <td><i>TBA...</i></td>
                                     </tr>
                                     <tr>
+                                        <td>2025</td>
+                                        <td>Applied Mathematics and Physics in Software Development</td>
+                                        <td>5</td>
+                                        <td><i>TBA...</i></td>
+                                    </tr>
+                                    <tr>
                                         <td>2024</td>
                                         <td>Web Progamming Application Project </td>
                                         <td>15</td>
