--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <section id="studies" class="flex-item bordered-section">
                     <h3>My Studies</h3>
                         <p>
-                            I'm in the Information Technology (B.Eng) degree program at Oulu University of Applied Sciences. My chosen speciality is Software Development, and I'm in my second year of studies.  
+                            I'm in the Information Technology (B.Eng) degree program at Oulu University of Applied Sciences. My chosen speciality is Software Development, and I'm starting my third year of studies this upcoming August.  
                             My GPA is 5.0/5.0, and I am on course to graduate on time in May 2027.
                             <br><br>Feel free to browse <a href="https://www.github.com/sannatikk/" target="_blank" rel="noopener noreferrer">my GitHub</a> repositories for examples of schoolwork I've been doing! 
                             Some of the technical courses I've taken so far include:
@@ -176,20 +176,20 @@
                     <h3>My Work + Experience</h3>
                         <p>
                             Feel free to browse <a href="https://github.com/sannatikk/" target="_blank" rel="noopener noreferrer">my GitHub</a> repositories for examples of schoolwork I've been doing! 
-                            What I'm working on this fall: a large-ish (15 ECTS) full stack project, where I'll be building an interactive web app for mobie hobbyists using PostgreSQL, Node, and React.
+                            What I'm working on this spring: mobile development (both hybrid and Android) theory, and a large 15 ECTS mobile app project. Stay tuned!
                             
                             <br><br>Some technologies I've been working with recently:
                             <ul>                               
-                                <li>JavaScript
+                                <li>JavaScript, Node<li>
+                                <li>React Native, Kotlin, Android Studio</li>
                                 <li>React (with Mocha/Chai/Jest for testing)</li>
-                                <li>Node.js</li>
                                 <li>Java</li>
                                 <li>C++</li>
                                 <li>HTML & CSS</li>
                                 <li>SQL (MySQL, PostgreSQL)</li>
                                 <li>Python</li>
                             </ul>
-                            My favorite project before this term has been <a href="https://github.com/sannatikk/web-kurssi-testiprojekti" target="_blank" rel="noopener noreferrer">this site you're currently on</a>! Even though this is only a 5-credit course, building a responsive website from scratch has been a great learning experience, and I'm proud of the result. It's very fulfilling to immediately be able to see the fruits of your labor!
+                            My favorite project so far has been <a href="https://github.com/sannatikk/movie-app-project" target="_blank" rel="noopener noreferrer">a full-stack web app</a> for movie enthusiasts to explore movies, manage favorites, read and write reviews, create social groups, and browse theater showtimes! It's got a hand-built PostgreSQL database, Node backend, React frontend, basic testing for both back and frontend, a light+dark theme and scalable design.
                             <br><br>A great larger project from my first year of studies was <a href="https://github.com/sannatikk/ATM_simulator_app" target="_blank" rel="noopener noreferrer">an ATM simulator</a>, where I got to practise building a Qt Widget frontend and Node Express backend, hand-building and querying relational databases, and using RESTful APIs. 
                             Fun extra credit challenges included hosting the database and backend remotely, using custom style sheets, and ensuring cross-platform compatibility.
                             <br><br>A fun electronics project from 2023 was the Arduino-based game <a href="https://github.com/sannatikk/SpedenSpelit" target="_blank" rel="noopener noreferrer">"Speden Spelit"</a>, which features LEDs, buttons, and a 7-segment display. Pressing the start button initiates LEDs blinking in random order at a steadily increasing pace. 
@@ -232,7 +232,7 @@
             </div>
 
             <footer class="flex-item bordered-section">
-                <p>Source code in <a href="https://www.github.com/sannatikk/web-kurssi-testiprojekti" target="_blank" rel="noopener noreferrer">my GitHub</a>.</p>
+                <p>Source code in <a href="https://github.com/sannatikk/web-portfolio" target="_blank" rel="noopener noreferrer">my GitHub</a>.</p>
             </footer>
 
         </main>
