--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                             
                             <br><br>Some technologies I've been working with recently:
                             <ul>                               
-                                <li>JavaScript, Node<li>
+                                <li>JavaScript, Node</li>
                                 <li>React Native, Kotlin, Android Studio</li>
                                 <li>React (with Mocha/Chai/Jest for testing)</li>
                                 <li>Java</li>
