--- a/index.html
+++ b/index.html
@@ -175,12 +175,13 @@
                 <section id="work" class="flex-item bordered-section">
                     <h3>My Work + Experience</h3>
                         <p>
-                            Feel free to browse <a href="https://github.com/sannatikk/" target="_blank" rel="noopener noreferrer">my GitHub</a> repositories for examples of schoolwork I've been doing! 
-                            What I'm working on this spring: mobile development (both hybrid and Android) theory, and a large 15 ECTS mobile app project. Stay tuned!
+                            <br><br>I am currently working on an exciting project in addition to my regular school courses: I'm part of a small team building a self-driving, deep learning robot car for a large automotive software company! 
+                            It's a huge leap into the unknown for me, and I'm excited to explore such a new (for me) part of software development.
                             
                             <br><br>Some technologies I've been working with recently:
                             <ul>                               
                                 <li>JavaScript, Node</li>
+                                <li>REST APIs</li>
                                 <li>React Native, Kotlin, Android Studio</li>
                                 <li>React (with Mocha/Chai/Jest for testing)</li>
                                 <li>Java</li>
@@ -189,7 +190,11 @@
                                 <li>SQL (MySQL, PostgreSQL)</li>
                                 <li>Python</li>
                             </ul>
-                            My favorite project so far has been <a href="https://github.com/sannatikk/movie-app-project" target="_blank" rel="noopener noreferrer">a full-stack web app</a> for movie enthusiasts to explore movies, manage favorites, read and write reviews, create social groups, and browse theater showtimes! It's got a hand-built PostgreSQL database, Node backend, React frontend, basic testing for both back and frontend, a light+dark theme and scalable design.
+
+                            Feel free to browse <a href="https://github.com/sannatikk/" target="_blank" rel="noopener noreferrer">my GitHub</a> repositories for examples of schoolwork I've been doing! 
+                            What I'm working on this spring: mobile development (both hybrid and Android) theory, and a large 15 ECTS mobile app project. Stay tuned!
+                            
+                            <br><br>My favorite project so far has been <a href="https://github.com/sannatikk/movie-app-project" target="_blank" rel="noopener noreferrer">a full-stack web app</a> for movie enthusiasts to explore movies, manage favorites, read and write reviews, create social groups, and browse theater showtimes! It's got a hand-built PostgreSQL database, Node backend, React frontend, basic testing for both back and frontend, a light+dark theme and scalable design.
                             <br><br>A great larger project from my first year of studies was <a href="https://github.com/sannatikk/ATM_simulator_app" target="_blank" rel="noopener noreferrer">an ATM simulator</a>, where I got to practise building a Qt Widget frontend and Node Express backend, hand-building and querying relational databases, and using RESTful APIs. 
                             Fun extra credit challenges included hosting the database and backend remotely, using custom style sheets, and ensuring cross-platform compatibility.
                             <br><br>A fun electronics project from 2023 was the Arduino-based game <a href="https://github.com/sannatikk/SpedenSpelit" target="_blank" rel="noopener noreferrer">"Speden Spelit"</a>, which features LEDs, buttons, and a 7-segment display. Pressing the start button initiates LEDs blinking in random order at a steadily increasing pace. 
