--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                 <section id="work" class="flex-item bordered-section">
                     <h3>My Work + Experience</h3>
                         <p>
-                            <br><br>I am currently working on an exciting project in addition to my regular school courses: I'm part of a small team building a self-driving, deep learning robot car for a large automotive software company! 
+                            I am currently working on an exciting project in addition to my regular school courses: I'm part of a small team building a self-driving, deep learning robot car for a large automotive software company! 
                             It's a huge leap into the unknown for me, and I'm excited to explore such a new (for me) part of software development.
                             
                             <br><br>Some technologies I've been working with recently:
