--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <p>
                             In spring 2023, I made the decision to quit my comfortable job in the funeral industry and apply to get a degree in Information Technology (Bachelor of Engineering).
                             Now, I'm a second-year student specializing in Software Development, and I'm loving the learning process and seeing how my past experiences enhance my current studies!
-                            I'm curious about working with SaaS, and I'm especially interested in all things UX, because that's what initially sparked my passion for the IT field. 
+                            I'm curious about working with SaaS, and I'm especially interested in woring with backend and testing-related tasks. 
                             My long-term ambitions include finding a position where I can combine my technical skills with my drive for managing projects efficiently and delivering top notch user experiences.
                             <br><br>When I'm not coding, you can find me adventuring on my bike, knitting, or planning a trip to Norway for some birdwatching.
                         </p>
@@ -115,7 +115,7 @@
                                         <td>2024</td>
                                         <td>Cloud Services</td>
                                         <td>5</td>
-                                        <td><i>5</i></td>
+                                        <td>5</td>
                                     </tr>
                                     <tr>
                                         <td>2024</td>
