--- a/index.html
+++ b/index.html
@@ -181,14 +181,14 @@
                             <br><br>Some technologies I've been working with recently:
                             <ul>                               
                                 <li>JavaScript, Node</li>
-                                <li>REST APIs</li>
-                                <li>React Native, Kotlin, Android Studio</li>
+                                <li>Python</li>
+                                <li>Relational databases, REST APIs</li>
+                                <li>React Native, Expo</li> 
+                                <li>Kotlin, Android Studio</li>
                                 <li>React (with Mocha/Chai/Jest for testing)</li>
                                 <li>Java</li>
-                                <li>C++</li>
+                                <li>C++, QT</li>
                                 <li>HTML & CSS</li>
-                                <li>SQL (MySQL, PostgreSQL)</li>
-                                <li>Python</li>
                             </ul>
 
                             Feel free to browse <a href="https://github.com/sannatikk/" target="_blank" rel="noopener noreferrer">my GitHub</a> repositories for examples of schoolwork I've been doing! 
