--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                             In spring 2023, I made the decision to quit my comfortable job in the funeral industry and apply to get a degree in Information Technology (Bachelor of Engineering).
                             Now, I'm a second-year student specializing in Software Development, and I'm loving the learning process and seeing how my past experiences enhance my current studies!
                             I'm curious about working with SaaS, and I'm especially interested in woring with backend, data, and testing-related tasks. 
-                            My long-term ambitions include finding a position where I can combine my technical skills with my drive for managing projects efficiently and delivering top notch user experiences.
+                            My long-term ambitions include finding a position where I can combine my technical skills with my drive for managing projects efficiently and delivering top notch customer experiences.
                             <br><br>When I'm not coding, you can find me adventuring on my bike, knitting, or planning a trip to Norway for some birdwatching.
                         </p>
                 </section>
