--- a/playground.html
+++ b/playground.html
@@ -43,7 +43,7 @@
                 <section id="playground-info" class="flex-item bordered-section">
                     <h3>Welcome to the Project Playground</h3>
                         <p>
-                            This specific page is dedicated to my Web Development course, whose grading criteria requires certain elements to be present on this website that don't fit into a traditional portfolio. 
+                            10/2024: This specific page is dedicated to my Web Development course, whose grading criteria requires certain elements to be present on this website that don't fit into a traditional portfolio. 
                             I will mostly be practising API calls and JavaScript in general here, so enjoy some interactive content!
                     
                         </p>
