--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                             In spring 2023, I made the decision to quit my comfortable job in the funeral industry and apply to get a degree in Information Technology (Bachelor of Engineering).
                             Now, I'm a second-year student specializing in Software Development, and I'm loving the learning process and seeing how my past experiences enhance my current studies!
                             I'm curious about working with SaaS, and I'm especially interested in woring with backend, data, and testing-related tasks. 
-                            My long-term ambitions include finding a position where I can combine my technical skills with my drive for managing projects efficiently and delivering top notch customer experiences.
+                            My long-term ambitions include finding a position where I can combine my technical skills with my drive for managing large projects efficiently.
                             <br><br>When I'm not coding, you can find me adventuring on my bike, knitting, or planning a trip to Norway for some birdwatching.
                         </p>
                 </section>
@@ -76,21 +76,27 @@
                                 <tbody>
                                     <tr>
                                         <td>2025</td>
+                                        <td>Mobile Development Project</td>
+                                        <td>15</td>
+                                        <td><i>TBA 05/25...</i></td>
+                                    </tr>
+                                    <tr>
+                                        <td>2025</td>
                                         <td>Web and Hybrid Technologies in Mobile Development</td>
                                         <td>5</td>
-                                        <td><i>TBA...</i></td>
+                                        <td><i>TBA soon...</i></td>
                                     </tr>
                                    <tr>
                                         <td>2025</td>
                                         <td>Mobile Development with Native Technologies</td>
                                         <td>5</td>
-                                        <td><i>TBA...</i></td>
+                                        <td><i>TBA soon...</i></td>
                                     </tr>
                                     <tr>
                                         <td>2025</td>
                                         <td>Applied Mathematics and Physics in Software Development</td>
                                         <td>5</td>
-                                        <td><i>TBA...</i></td>
+                                        <td><i>TBA soon...</i></td>
                                     </tr>
                                     <tr>
                                         <td>2024</td>
@@ -184,7 +190,7 @@
                                 <li>Python</li>
                                 <li>Relational databases, REST APIs</li>
                                 <li>React Native, Expo</li> 
-                                <li>Kotlin, Android Studio</li>
+                                <li>Kotlin, Jetpack Compose</li>
                                 <li>React (with Mocha/Chai/Jest for testing)</li>
                                 <li>Java</li>
                                 <li>C++, QT</li>
