--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
                 <section id="studies" class="flex-item bordered-section">
                     <h3>My Studies</h3>
                         <p>
-                            I'm in the Information Technology (B.Eng) degree program at Oulu University of Applied Sciences. My chosen speciality is Software Development, and I'm starting my third year of studies this upcoming August.  
+                            I'm in the Information Technology (B.Eng.) degree program at Oulu University of Applied Sciences. My chosen speciality is Software Development, and I'm starting my third year of studies this upcoming August.  
                             My GPA is 5.0/5.0, and I am on course to graduate on time in May 2027.
                             <br><br>Feel free to browse <a href="https://www.github.com/sannatikk/" target="_blank" rel="noopener noreferrer">my GitHub</a> repositories for examples of schoolwork I've been doing! 
-                            Some of the technical courses I've taken so far include:
+                            Some of the technical courses I've recently completed include:
                             
                             <table class="studies-table">
                                 <thead>
@@ -70,7 +70,7 @@
                                         <th>Year</th>
                                         <th>Subject</th>
                                         <th>ECTS*</th>
-                                        <th>My Grade (1-5)</th>
+                                        <th>My Grade (1-5 or pass/fail)</th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -78,19 +78,25 @@
                                         <td>2025</td>
                                         <td>Mobile Development Project</td>
                                         <td>15</td>
-                                        <td><i>TBA 05/25...</i></td>
+                                        <td>5</td>
+                                    </tr>
+                                    <tr>
+                                        <td>2025</td>
+                                        <td>Intro to Cybersecurity</td>
+                                        <td>2</td>
+                                        <td>Pass</td>
                                     </tr>
                                     <tr>
                                         <td>2025</td>
                                         <td>Web and Hybrid Technologies in Mobile Development</td>
                                         <td>5</td>
-                                        <td><i>TBA soon...</i></td>
+                                        <td>5</td>
                                     </tr>
                                    <tr>
                                         <td>2025</td>
                                         <td>Mobile Development with Native Technologies</td>
                                         <td>5</td>
-                                        <td><i>TBA soon...</i></td>
+                                        <td>5</td>
                                     </tr>
                                     <tr>
                                         <td>2025</td>
@@ -147,30 +153,6 @@
                                         <td>5</td>
                                         <td>5</td>
                                     </tr>  
-                                    <tr>
-                                        <td>2023</td>
-                                        <td>IT Application Project</td>
-                                        <td>12</td>
-                                        <td>5</td>
-                                    </tr>
-                                    <tr>
-                                        <td>2023</td>
-                                        <td>Introduction to Programming</td>
-                                        <td>5</td>
-                                        <td>5</td>
-                                    </tr>
-                                    <tr>
-                                        <td>2023</td>
-                                        <td>Introduction to Electronics</td>
-                                        <td>5</td>
-                                        <td>5</td>
-                                    </tr>
-                                    <tr>
-                                        <td>2023</td>
-                                        <td>Introduction to Mathematics and Digital Technology in IT</td>
-                                        <td>5</td>
-                                        <td>5</td>
-                                    </tr>
                                 </tbody>
                             </table>
                             * 1 ECTS = estimated 27 hours of work
