disable playground link

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <li><a href="#work">Jump: Work</a></li>
                         <li><a href="#contact">Jump: Contact</a></li>
                         <li><a href="#" id="toggle-mode">Switch to Dark Mode</a></li>
-                        <li><a href="playground.html">PLAYGROUND</a></li>
+                        <!-- <li><a href="playground.html">PLAYGROUND</a></li> -->
                     </ul>
                 </nav>
             
