--- a/index.html
+++ b/index.html
@@ -76,6 +76,12 @@
                                 <tbody>
                                     <tr>
                                         <td>2025</td>
+                                        <td>Intro to C#</td>
+                                        <td>5</td>
+                                        <td><i>TBD...</i></td>
+                                    </tr>
+                                    <tr>
+                                        <td>2025</td>
                                         <td>Mobile Development Project</td>
                                         <td>15</td>
                                         <td>5</td>
@@ -163,13 +169,14 @@
                 <section id="work" class="flex-item bordered-section">
                     <h3>My Work + Experience</h3>
                         <p>
-                            I am currently working on an exciting project in addition to my regular school courses: I'm part of a small team building a self-driving, deep learning robot car for a large automotive software company! 
+                            I am currently working on an intern project in addition to my regular school courses: I'm part of a small team building a self-driving, deep learning robot car for a large automotive software company! 
                             It's a huge leap into the unknown for me, and I'm excited to explore such a new (for me) part of software development.
                             
                             <br><br>Some technologies I've been working with recently:
                             <ul>                               
                                 <li>JavaScript, Node</li>
                                 <li>Python</li>
+                                <li>C# .NET</li>
                                 <li>Relational databases, REST APIs</li>
                                 <li>React Native, Expo</li> 
                                 <li>Kotlin, Jetpack Compose</li>
