--- a/index.html
+++ b/index.html
@@ -76,21 +76,9 @@
                                 <tbody>
                                     <tr>
                                         <td>2025</td>
-                                        <td>Intro to C#</td>
-                                        <td>5</td>
-                                        <td><i>TBD...</i></td>
-                                    </tr>
-                                    <tr>
-                                        <td>2025</td>
                                         <td>Mobile Development Project</td>
                                         <td>15</td>
                                         <td>5</td>
-                                    </tr>
-                                    <tr>
-                                        <td>2025</td>
-                                        <td>Intro to Cybersecurity</td>
-                                        <td>2</td>
-                                        <td>Pass</td>
                                     </tr>
                                     <tr>
                                         <td>2025</td>
@@ -162,6 +150,8 @@
                                 </tbody>
                             </table>
                             * 1 ECTS = estimated 27 hours of work
+
+                            <br><br>This is just a selection of my coursework — feel free to contact me if you’d like to see my full academic transcript. In addition to my core studies, I’ve also completed extracurricular courses in topics such as C# .NET programming and cybersecurity.
                         </p>
                 </section>
 
