--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                                         <th>Year</th>
                                         <th>Subject</th>
                                         <th>ECTS*</th>
-                                        <th>My Grade (1-5 or pass/fail)</th>
+                                        <th>My Grade (1-5)</th>
                                     </tr>
                                 </thead>
                                 <tbody>
