--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                     <h3>About Me</h3>
                         <p>
                             In 2023, I made the decision to quit my comfortable job in the funeral industry and apply to get a degree in Information Technology (Bachelor of Engineering).
-                            Now, I'm about to wrap up my second year of studies specializing in Software Development, and I'm loving the learning process and seeing how my past experiences enhance my current studies!
-                            I'm curious about working with SaaS, and I'm especially interested in working with UI and testing-related tasks. 
+                            Now, I'm about to wrap up my third year of studies specializing in Software Development, and I'm loving the learning process and seeing how my past experiences enhance my current studies!
+                            I'm curious about working with SaaS, and I'm especially interested in working with backend and testing-related tasks. 
                             My long-term ambitions include finding a position where I can combine my technical skills with my drive for managing large projects efficiently.
                             <br><br>When I'm not coding, you can find me adventuring with my dog, knitting, or planning a trip to Norway for some birdwatching.
                         </p>
@@ -78,7 +78,7 @@
                                         <td>2025</td>
                                         <td>Advanced Software Development Techniques</td>
                                         <td>5</td>
-                                        <td><i>TBD...</i></td>
+                                        <td><i>5</i></td>
                                     </tr>
                                     <tr>
                                         <td>2025</td>
